--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 const pageTitle = "About Me";
 
 const identity = {
@@ -14,7 +15,9 @@ const happy = true;
 const finished = false;
 const goal = 3;
 
-const skillColor = "pink";
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -24,15 +27,15 @@ const skillColor = "pink";
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>{pageTitle}</title>
-        <style>
+        <style define:vars={{ skillColor, fontWeight, textCase }}>
             h1 {
                 color: purple;
                 font-size: 4rem;
             }
             .skill {
-                /* color: green; */
                 color: var(--skillColor);
-                font-weight: bold;
+                font-weight: var(--fontWeight);
+                text-transform: var(--textCase);
             }
         </style>
     </head>
