--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 const pageTitle = "About Me";
 
@@ -13,7 +15,7 @@ const skills = ["HTML", "CSS", "JavaScript", "Astro", "Writing Docs"];
 
 const happy = true;
 const finished = false;
-const goal = 3;
+const goal = 2;
 
 const skillColor = "navy";
 const fontWeight = "bold";
@@ -40,9 +42,7 @@ const textCase = "uppercase";
         </style>
     </head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+        <Navigation />
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
 
@@ -84,8 +84,10 @@ const textCase = "uppercase";
             goal === 3 ? (
                 <p>My goal is to finish in 3 days.</p>
             ) : (
-                <p>My goal is not 3 days.</p>
+                <p>Should be done in {goal} days.</p>
             )
         }
+
+        <Footer />
     </body>
 </html>
