it is too late so it is one big save for now

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ const pageTitle = "About Me";
 const identity = {
     firstName: "Hazim",
     country: "Hungary",
-    occupation: "Top Dog Dev",
+    occupation: "Top Dog Software engineer ",
     hobbies: ["photography", "music", "watching paint dry"],
 };
 
