--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,34 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Home Page";
+const pageTitle = "Hi there! 👋";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-	<h2>My awesome blog subtitle</h2>
+	<h2>Building with Astro</h2>
+	<!-- <p>
+		As I delve into the world of frontend coding to complement my graphic
+		design skills, this website serves as my dynamic playground, evolving
+		alongside my learning journey. Expect continuous changes and
+		enhancements as I find my footing in the world of web development.
+	</p> -->
+
+	<!-- <p>
+		In due course, I'll be introducing a blog section—a space where I share
+		insights gained along the way. Some posts will be personal notes,
+		serving as valuable references for me in the future, and hopefully,
+		offering a helping hand to others venturing into the same territory.
+	</p> -->
+
+	<!-- <p>
+		Feel free to connect with me on X (formerly Twitter) or drop me an
+		email; I always appreciate engaging conversations. For those who enjoy a
+		more social touch, take a peek at my musical preferences on Last.FM. It
+		might just be the perfect conversation starter—we can dive into the
+		world of music.
+	</p> -->
+
+	<!-- <p>
+		In the pipeline, there's an exciting project brewing: a mixtape site set
+		to launch before my portfolio site.
+	</p> -->
 </BaseLayout>
