complete the Astro tutorial

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ import Social from "./Social.astro";
             href={`https://www.${platform}.com/${username}`}>{platform}</a
         >!
     </p> -->
-    <Social platformName="Twitter" platform="twitter" username="hazim" />
+    <Social platformName="X" platform="twitter" username="astrodotbuild" />
     <Social platformName="GitHub" platform="github" username="withastro" />
     <Social
         platformName="YouTube"
@@ -25,8 +25,8 @@ import Social from "./Social.astro";
         username="astrodotbuild"
     />
     <p class="footer-text">
-        &copy; <span id="year"></span> Hazim Sami. All rights reserved. Powered by
-        the wonderful <a href="https://astro.build/">Astro</a> JS framework.
+        &copy; <span id="year"></span> FrontEndFlux. All rights reserved. Powered
+        by the wonderful <a href="https://astro.build/">Astro</a> JS framework.
     </p>
     <script>
         import "../scripts/year.js";
