--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,17 +3,17 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "About Me";
 
 const identity = {
-    firstName: "Hazim",
-    country: "Hungary",
-    occupation: "Top Dog Software engineer ",
+    firstName: "FrontEndFlux",
+    country: "UK",
+    occupation: "FrontEnd Dev ",
     hobbies: ["photography", "music", "watching paint dry"],
 };
 
 const skills = ["HTML", "CSS", "JavaScript", "Astro", "Writing Docs"];
 
 const happy = true;
-const finished = false;
-const goal = 1;
+const finished = true;
+const goal = 3;
 
 const skillColor = "navy";
 const fontWeight = "bold";
@@ -34,7 +34,7 @@ const textCase = "uppercase";
     </p>
     <p>Here are a few facts about me:</p>
     <ul>
-        <li>My name is {identity.firstName}.</li>
+        <li>I am {identity.firstName}.</li>
         <li>
             I live in {identity.country} and I work as a {identity.occupation}.
         </li>
