add umami tracker to site

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,6 +10,12 @@ const { pageTitle } = Astro.props;
     <head>
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+        <script
+            defer
+            src="https://cloud.umami.is/script.js"
+            data-website-id="25e3c34e-a0b9-42d2-b2a1-93e6cdc2259f"></script>
+
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>{pageTitle}</title>
