--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,13 +8,35 @@ const { pageTitle } = Astro.props;
 
 <html lang="en">
     <head>
+        <script type="text/javascript">
+            var _iub = _iub || [];
+            _iub.csConfiguration = {
+                siteId: 3933071,
+                cookiePolicyId: 38493909,
+                lang: "en",
+                storage: { useSiteId: true },
+            };
+        </script>
+        <script
+            type="text/javascript"
+            src="https://cs.iubenda.com/autoblocking/3933071.js"></script>
+        <script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="//cdn.iubenda.com/cs/iubenda_cs.js"
+            charset="UTF-8"
+            async
+        ></script>
+
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-        <script
+        <!-- Umami analytics script -->
+        <!-- <script
             defer
             src="https://cloud.umami.is/script.js"
-            data-website-id="25e3c34e-a0b9-42d2-b2a1-93e6cdc2259f"></script>
+            data-website-id="25e3c34e-a0b9-42d2-b2a1-93e6cdc2259f"></script> -->
 
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
