add Iubenda Privacy and Cookie Policy

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,4 +31,50 @@ import Social from "./Social.astro";
     <script>
         import "../scripts/year.js";
     </script>
+
+    <!-- Iubenda Privacy Policy -->
+    <a
+        href="https://www.iubenda.com/privacy-policy/38493909"
+        class="iubenda-nostyle no-brand iubenda-noiframe iubenda-embed iubenda-noiframe"
+        title="Privacy Policy ">Privacy Policy</a
+    ><script type="text/javascript">
+        (function (w, d) {
+            var loader = function () {
+                var s = d.createElement("script"),
+                    tag = d.getElementsByTagName("script")[0];
+                s.src = "https://cdn.iubenda.com/iubenda.js";
+                tag.parentNode.insertBefore(s, tag);
+            };
+            if (w.addEventListener) {
+                w.addEventListener("load", loader, false);
+            } else if (w.attachEvent) {
+                w.attachEvent("onload", loader);
+            } else {
+                w.onload = loader;
+            }
+        })(window, document);
+    </script>
+
+    <!-- Iubenda Cookie Policy -->
+    <a
+        href="https://www.iubenda.com/privacy-policy/38493909/cookie-policy"
+        class="iubenda-nostyle no-brand iubenda-noiframe iubenda-embed iubenda-noiframe"
+        title="Cookie Policy ">Cookie Policy</a
+    ><script type="text/javascript">
+        (function (w, d) {
+            var loader = function () {
+                var s = d.createElement("script"),
+                    tag = d.getElementsByTagName("script")[0];
+                s.src = "https://cdn.iubenda.com/iubenda.js";
+                tag.parentNode.insertBefore(s, tag);
+            };
+            if (w.addEventListener) {
+                w.addEventListener("load", loader, false);
+            } else if (w.attachEvent) {
+                w.attachEvent("onload", loader);
+            } else {
+                w.onload = loader;
+            }
+        })(window, document);
+    </script>
 </footer>
