--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,6 +8,7 @@ const { pageTitle } = Astro.props;
 
 <html lang="en">
     <head>
+        <!-- Iubenda Cookie banner -->
         <script type="text/javascript">
             var _iub = _iub || [];
             _iub.csConfiguration = {
@@ -20,6 +21,11 @@ const { pageTitle } = Astro.props;
         <script
             type="text/javascript"
             src="https://cs.iubenda.com/autoblocking/3933071.js"></script>
+        <script type="text/javascript" src="//cdn.iubenda.com/cs/tcf/stub-v2.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="//cdn.iubenda.com/cs/tcf/safe-tcf-v2.js"></script>
         <script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"
         ></script>
         <script
